# IMAGE_PROCESSING

./: pyproject.toml
lab_01-intro/: 01_intro.ipynb
lab_02-point_operations/: 02_point.ipynb
lab_03-histogram/: 03_histogram_hw.ipynb
lab_04-binarization/: 04_thresholding.ipynb
lab_05-resultion/: 05_resolution_hw.ipynb
lab_06-preprocessing/: 06_context_hw1.ipynb  06_context_hw2.ipynb
