[tool.poetry]
name = "image-processing"
version = "0.1.0"
description = "Laboratories for image processing course at AGH"
authors = ["dmarek03 <domarek@student.agh.edu.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.2"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
